# unport

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
docs/plans/: 2025-12-05-https-support-design.md
src/: client.rs  config.rs  daemon.rs  detect.rs  logger.rs  main.rs  process.rs  proxy.rs  tls.rs
tests/: config_tests.rs  daemon_tests.rs  detect_tests.rs  proxy_tests.rs  registry_tests.rs  types_tests.rs
