[package]
name = "unport-cli"
version = "0.1.0"
edition = "2021"
description = "Local development port manager with automatic domain routing"
license = "MIT"
repository = "https://github.com/ozankasikci/unport"
homepage = "https://github.com/ozankasikci/unport"
readme = "README.md"
keywords = ["development", "localhost", "proxy", "port", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "unport"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Daemon
daemonize = "0.5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
dirs = "5"
libc = "0.2"
ctrlc = "3"
